violating_resources/anthos-service-mesh/authorization-policy/disallowed-prefix/samples/example_disallowed_bad_principal.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bad-source-principal
spec:
  selector:
    matchLabels:
      app: httpbin
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/worse-principal-prefix-sleep"]
        - source:
            namespaces: ["test"]
